--- a/Spectral Clustering/Q1.ipynb
+++ b/Spectral Clustering/Q1.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Full Name: امیرحسین کوچکیان\n",
+    "Full Name: Amirhossein Koochakian\n",
     "\n",
     "Student ID: 400105199\n"
    ]
